--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity android:name=".InicioSesionActivity"
             android:exported="true" />
 
+        <activity android:name=".RestablecerContrasenaActivity"
+            android:exported="true" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
