chore: reestablecer contraseña sin comprobar si el correo está registrado

--- a/.dropboxignore
+++ b/.dropboxignore
@@ -1,5 +1,12 @@
+local.properties
 .gradle/
-build/
 .idea/
+build/
+captures/
 */build/
 */captures/
+app/build/
+*/.gradle/
+*/build/
+*.iml
+.DS_Store
