--- a/src/telefono/BTLE_AlanGuevara/gradle/libs.versions.toml
+++ b/src/telefono/BTLE_AlanGuevara/gradle/libs.versions.toml
@@ -1,5 +1,4 @@
 [versions]
-agp = "8.6.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
@@ -20,5 +19,4 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-
+# ❌ ELIMINA por completo android-application
