toolbar y menu inferior
Agregadas menu activity y mapas activity pero no implementadas, solo añadidas para hacer el manu de navegación inferior.

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <activity android:name=".RestablecerContrasenaActivity"
             android:exported="true" />
 
+        <activity android:name=".UserPageActivity"
+            android:exported="true" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
