--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -46,6 +46,12 @@
         <activity android:name=".UserPageActivity"
             android:exported="true" />
 
+        <activity android:name=".PerfilActivity"
+            android:exported="true" />
+
+        <activity android:name=".EditarPerfilActivity"
+            android:exported="true" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
