--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
         <activity android:name=".EditarPerfilActivity"
             android:exported="true" />
 
+        <activity android:name=".VincularSensorActivity"
+            android:exported="true" />
+
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
