--- a/src/telefono/BTLE_AlanGuevara/app/build.gradle
+++ b/src/telefono/BTLE_AlanGuevara/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    // Escáner QR
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 }
