--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
         <activity android:name=".VincularSensorActivity"
             android:exported="true" />
 
+        <activity android:name=".EscanearQrActivity"
+            android:exported="true" />
+
 
         <meta-data
             android:name="preloaded_fonts"
