--- a/src/telefono/BTLE_AlanGuevara/app/build.gradle
+++ b/src/telefono/BTLE_AlanGuevara/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
+    implementation 'com.google.android.material:material:1.11.0'
+
     // Escáner QR
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 }
