--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -72,6 +72,10 @@
         <activity android:name=".MenuActivity"
             android:exported="true"/>
 
+        <activity
+            android:name=".InfoPopupActivity"
+            android:theme="@style/PopupTarjetaReal"/>
+
     </application>
 
 </manifest>
