--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -90,6 +90,13 @@
         <activity
             android:name=".ActividadInicio"
             android:exported="false"/>
+
+        <service
+            android:name=".BeaconScanService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="location" />
+
     </application>
 
 </manifest>
