--- a/src/telefono/BTLE_AlanGuevara/app/build.gradle
+++ b/src/telefono/BTLE_AlanGuevara/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation "com.google.firebase:firebase-analytics"
     implementation("com.google.firebase:firebase-auth")
 
+    implementation ("com.github.PhilJay:MPAndroidChart:v3.1.0")
+
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
