--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Material3.DayNight.NoActionBar"
+        android:theme="@style/Base.Theme.BTLE_AlanGuevara"
         android:networkSecurityConfig="@xml/network_security_config"
         >
         <!-- Desde Android 12 es obligatorio indicar android:exported en actividades,
