--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -88,6 +88,9 @@
         <activity android:name=".MenuActivity"
             android:exported="true"/>
 
+        <activity android:name=".InfoContaminantesActivity"
+            android:exported="true"/>
+
         <activity
             android:name=".InfoPopupActivity"
             android:theme="@style/PopupTarjetaReal"/>
