Añadidos terminos de privacidad

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -75,6 +75,9 @@
         <activity android:name=".InfoContaminantesActivity"
             android:exported="true"/>
 
+        <activity android:name=".PrivacidadActivity"
+            android:exported="true"/>
+
         <service
             android:name=".ServicioDeteccionBeacons"
             android:foregroundServiceType="location"
