--- a/src/telefono/BTLE_AlanGuevara/app/build.gradle
+++ b/src/telefono/BTLE_AlanGuevara/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     implementation ("com.github.PhilJay:MPAndroidChart:v3.1.0")
 
+    implementation "androidx.biometric:biometric:1.2.0-alpha05"
+
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
