--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -27,9 +27,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
 
-
-
     <application
+        android:name=".AtmosApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
