--- a/src/telefono/BTLE_AlanGuevara/app/build.gradle
+++ b/src/telefono/BTLE_AlanGuevara/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     // Escáner QR
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
+    // GPS
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
