--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+
 
 
 
@@ -82,7 +85,6 @@
             android:foregroundServiceType="location"
             android:exported="false" />
 
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
@@ -109,7 +111,6 @@
         <activity
             android:name=".ActividadInicio"
             android:exported="false"/>
-
     </application>
 
 </manifest>
