chore: algo funciona pero si no salgo a la calle nunca podré saber.

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -119,6 +119,17 @@
         <activity
             android:name=".ActividadInicio"
             android:exported="false"/>
+
+        <service
+            android:name=".ServicioRecorridoGPS"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="location" />
+
+        <receiver
+            android:name=".RecorridoStopReceiver"
+            android:exported="false" />
+
     </application>
 
 </manifest>
