Incidencias android funcional

--- a/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
+++ b/src/telefono/BTLE_AlanGuevara/app/src/main/AndroidManifest.xml
@@ -131,6 +131,9 @@
             android:name=".RecorridoStopReceiver"
             android:exported="false" />
 
+        <activity android:name=".IncidenciasActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
